# FirstVulkanApp

./: .gitignore  CMakeLists.txt  VKApp.cpp  VKApp.h  VKDebugAllocator.cpp  VKDebugAllocator.h  main.cpp
Shaders/: pp.frag  pp.vert  shader.frag  shader.vert
Vulkan/: ResourceManager.h  VKApp.cpp  VKApp.h  VKDebugAllocator.h
Vulkan/Shaders/: shader.frag  shader.vert
src/: main.cpp
src/Camera/: Camera.cpp  Camera.h  PlayerCamera.cpp  PlayerCamera.h
src/Managers/: Application.cpp  Application.h  InputManager.cpp  InputManager.h  TimeManager.cpp  TimeManager.h
src/Utils/Loaders/: ImageLoader.cpp
src/Utils/Strings/: format.cpp
src/Vulkan/: VKApp.cpp  VKApp.h
src/Vulkan/Core/: VulkanCommandPool.cpp  VulkanDescriptorPool.cpp  VulkanDescriptorPool.h  VulkanDevice.cpp  VulkanDevice.h  VulkanGraphicsPipeline.cpp  VulkanGraphicsPipeline.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanRenderManager.cpp  VulkanRenderManager.h  VulkanSwapchain.cpp
src/Vulkan/Debug/: VKDebugAllocator.cpp  VKLogger.cpp  VKLogger.h  VKLoggerConfig.cpp  VKLoggerConfig.h
src/Vulkan/Memory/: BufferFactory.cpp  BufferFactory.h  ImageFactory.cpp  ImageFactory.h  ResourceManager.h  VKDebugAllocator.cpp
